--- a/src/components/Sticky/index.module.css
+++ b/src/components/Sticky/index.module.css
@@ -23,6 +23,7 @@
   background-color: #fff;
   border-radius: 3px;
   padding: 0px 12px;
+  border-bottom: 1px solid #f5f6f7;
   cursor: pointer;
 }
 
